Tableau des notifications

--- a/WebContent/mz/layout/menu.xhtml
+++ b/WebContent/mz/layout/menu.xhtml
@@ -106,6 +106,10 @@
 				<s:link action="/mz/intervenant/grilles"
 					value="#{messages['menu.grille']}" propagation="none" />
 			</rich:menuItem>
+			<rich:menuItem>
+				<s:link action="/mz/intervenant/notifications"
+					value="#{messages['menu.notification']}" propagation="none" />
+			</rich:menuItem>
 		</rich:dropDownMenu>
 		<!-- menu Prospect -->
 		<rich:dropDownMenu mode="ajax">
