--- a/reports/devis.jrxml
+++ b/reports/devis.jrxml
@@ -11,7 +11,7 @@
 	<style name="titleCol" hTextAlign="Left" hImageAlign="Left" fontName="Open Sans" fontSize="9" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 	<style name="legend" style="default" hTextAlign="Center" hImageAlign="Center" isItalic="true" isUnderline="false" isStrikeThrough="false"/>
 	<style name="sousTitle" fontName="Roboto" fontSize="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
-	<style name="adresse" style="default" fontSize="7"/>
+	<style name="adresse" style="default" fontSize="8"/>
 	<parameter name="idDevis" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[22830]]></defaultValueExpression>
 	</parameter>
@@ -692,13 +692,14 @@
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="140" splitType="Stretch">
+		<band height="92" splitType="Stretch">
 			<staticText>
-				<reportElement style="legend" x="0" y="1" width="555" height="16" uuid="58dc0270-502a-48b8-b7ba-67a9e7d1aa00"/>
-				<text><![CDATA[La signature de cette page vaut acceptation des conditions générales de vente de PLB Consultant ci-jointes]]></text>
+				<reportElement style="legend" x="0" y="0" width="555" height="25" uuid="58dc0270-502a-48b8-b7ba-67a9e7d1aa00"/>
+				<textElement markup="html"/>
+				<text><![CDATA[La signature de cette page vaut acceptation des conditions générales de vente de PLB Consultant ci-jointes<br/>et valide la lecture du Règlement Intérieur de PLB Consultant <a href="https://www.plb.fr/ri.php">(<u><font color="blue">à lire sur notre site web</font></u>)</a> ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="sousTitle" mode="Opaque" x="0" y="18" width="555" height="28" printWhenGroupChanges="Devis" backcolor="#F2F2F2" uuid="7e564632-71b4-4bda-97ef-99b202e49d46"/>
+				<reportElement style="sousTitle" mode="Opaque" x="0" y="25" width="555" height="28" printWhenGroupChanges="Devis" backcolor="#F2F2F2" uuid="7e564632-71b4-4bda-97ef-99b202e49d46"/>
 				<box topPadding="0">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -711,7 +712,7 @@
 				<text><![CDATA[CONDITIONS D'ANNULATION/REPORT]]></text>
 			</staticText>
 			<textField>
-				<reportElement mode="Opaque" x="0" y="46" width="555" height="46" printWhenGroupChanges="Devis" backcolor="#F2F2F2" uuid="ff4ed338-240c-42ca-8948-d57c25adaf45"/>
+				<reportElement mode="Opaque" x="0" y="53" width="555" height="39" printWhenGroupChanges="Devis" backcolor="#F2F2F2" uuid="ff4ed338-240c-42ca-8948-d57c25adaf45"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -728,22 +729,22 @@
 	<pageFooter>
 		<band height="56">
 			<staticText>
-				<reportElement style="adresse" x="0" y="36" width="471" height="11" forecolor="#045C9B" uuid="c8525ebb-0499-4001-aec4-93a770178122"/>
+				<reportElement style="adresse" x="0" y="31" width="471" height="11" forecolor="#045C9B" uuid="c8525ebb-0499-4001-aec4-93a770178122"/>
 				<textElement textAlignment="Left"/>
-				<text><![CDATA[ RCS Nanterre B 421 694 779 - APE 6202A - Siret : 42169477900057 - N° Déclaration d'activité : 119 211 300 92]]></text>
+				<text><![CDATA[N° Déclaration d'activité : 119 211 300 92 - Cet enregistrement ne vaut pas agrément de l'État]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="adresse" x="0" y="22" width="471" height="12" forecolor="#045C9B" uuid="207777f7-fc8b-4180-8d99-23aac978bb07"/>
+				<reportElement style="adresse" x="0" y="19" width="471" height="12" forecolor="#045C9B" uuid="207777f7-fc8b-4180-8d99-23aac978bb07"/>
 				<textElement textAlignment="Left"/>
-				<text><![CDATA[Tél : 01 43 34 90 94 -  www.plb.fr - plb@plb.fr - SARL au capital de 100 000 €]]></text>
+				<text><![CDATA[SARL au capital de 100 000 € - RCS Nanterre B 421 694 779 - APE 6202A - Siret : 42169477900057]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="adresse" x="0" y="4" width="471" height="17" forecolor="#045C9B" uuid="1fa97e1f-5ac3-4cdf-a2a0-f119835e7083"/>
+				<reportElement style="adresse" x="0" y="4" width="471" height="15" forecolor="#045C9B" uuid="1fa97e1f-5ac3-4cdf-a2a0-f119835e7083"/>
 				<box topPadding="2"/>
 				<textElement textAlignment="Left" markup="html">
 					<font isBold="false"/>
 				</textElement>
-				<text><![CDATA[<b>PLB Consultant</b> - 3-5 rue Maurice Ravel - 92 300 Levallois-Perret]]></text>
+				<text><![CDATA[<b>PLB Consultant</b> - 3-5 rue Maurice Ravel - 92 300 Levallois-Perret - Tél : 01 43 34 90 94 - www.plb.fr - plb@plb.fr]]></text>
 			</staticText>
 			<image>
 				<reportElement x="505" y="4" width="50" height="33" uuid="df5a4d57-b3bc-492f-ad71-91c0ef4b3ea7"/>
