--- a/WebContent/mz/formation/layout/web.xhtml
+++ b/WebContent/mz/formation/layout/web.xhtml
@@ -29,9 +29,9 @@
 
 				</fieldset>		
 				<fieldset>
-					<legend> #{messages['formation.objectifs_operationels']}</legend>
+					<legend> #{messages['formation.objectifs_operationnels']}</legend>
 					
-					<ui:insert name="objectifs_operationels" />
+					<ui:insert name="objectifs_operationnels" />
 
 				</fieldset>		
 				<fieldset>
